<resources>
    <string name="app_name">Blueshare</string>
    <string name="default_web_client_id_google" translatable="false">453605900545-ir7e7tpac0jko17q24fid00gfk1qgj62.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="welcome">Bienvenido(a)</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="notAccount">¿No tienes cuenta?</string>
    <string name="registerHere">Registrate aquí</string>
    <string name="registerNow">Registrate ahora</string>
    <string name="registerMe">Registrarme</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="phone">Número de teléfono</string>
    <string name="username">Nombre de usuario</string>
    <string name="completeInfo">Completa tu información</string>
    <string name="confirmInfo">Confirmar</string>
    <string name="forgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="contactMe">Contáctame</string>
    <string name="sendForm">Enviar formulario</string>
    <string name="complain">Queja</string>
    <string name="suggestion">Sugerencia</string>
    <string name="writeMessage">Tu mensaje…</string>
    <string name="description">Descripción</string>
    <string name="comments">Comentarios</string>
    <string name="toPost">Publicar</string>
    <string name="videogames">Videojuegos</string>
    <string name="programation">Programación</string>
    <string name="music">Música</string>
    <string name="lifestyle">Estilo de vida</string>
    <string name="sports">Deporte</string>
    <string name="culture">Cultura</string>
    <string name="selectCategory">Seleccione una categoría:</string>
    <string name="title">Título</string>
    <string name="newPost">Nueva publicación</string>
    <string name="posts">Publicaciones</string>
    <string name="editProfile">Editar perfil</string>
    <string name="results">resultado(s)</string>
    <string name="signOut">Cerrar sesión</string>
    <string name="about">Acerca de</string>
    <string name="home">Inicio</string>
    <string name="chats">Chats</string>
    <string name="categories">Categorías</string>
    <string name="myProfile">Mi perfil</string>
    <string name="currentVersion">Versión: 1.0.0</string>
    <string name="copyrightAndRelease">© Junio 2021 EdiVal</string>
    <string name="developedBy">Desarrollado por:</string>
    <string name="developerName">Edgar Manuel Velázquez Valdes</string>
    <string name="back">VOLVER</string>
    <string name="zero">0</string>
    <string name="viewProfile">Ver perfil</string>
    <string name="selectAReason">Seleccione un motivo:</string>
    <string name="call">Llamar</string>
</resources>