<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <io.github.florent37.shapeofview.shapes.ArcView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                app:shape_arc_height="20dp"
                app:shape_arc_position="bottom">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_main" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_margin="20dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewAppName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="34sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/imageViewIconApp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageViewIconApp"
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_icon_app"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewAppName" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </io.github.florent37.shapeofview.shapes.ArcView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:counterTextColor="@color/black"
                app:errorEnabled="true"
                app:helperText="Ej. usuario@proveedor.com"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/black"
                app:placeholderTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress|textMultiLine"
                    android:maxLength="30"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:counterTextColor="@color/black"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:placeholderTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword|textMultiLine"
                    android:maxLength="15"
                    android:maxLines="2"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/forgotPassword"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                app:icon="@drawable/ic_login"
                app:iconTint="@color/colorAccent" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/notAccount"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/registerHere"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>