<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorContactanos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.ContactanosActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <io.github.florent37.shapeofview.shapes.DiagonalView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:shape_diagonal_angle="5"
                app:shape_diagonal_position="bottom">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_main" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_margin="20dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/circleImageBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:src="@drawable/ic_arrow_left_white"
                        app:layout_constraintBottom_toBottomOf="@id/textViewContactame"
                        app:layout_constraintEnd_toStartOf="@id/textViewContactame"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewContactame"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/contactMe"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@id/imageViewSupportAgent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/circleImageBack"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageViewSupportAgent"
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_support_agent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewContactame" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </io.github.florent37.shapeofview.shapes.DiagonalView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/username"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/white"
                app:counterTextColor="@color/black"
                app:placeholderTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_account">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputUsernameForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:maxLines="2"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/white"
                app:counterTextColor="@color/black"
                app:placeholderTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEmailForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/G6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/G5">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonComplain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:text="@string/complain" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonSuggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/suggestion" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:hint="@string/writeMessage"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="250"
                app:counterTextColor="@color/black"
                app:errorEnabled="true"
                app:placeholderTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_chat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputMessageForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:isScrollContainer="true"
                    android:maxLength="250"
                    android:maxLines="10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSendForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="30dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/sendForm"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                app:icon="@drawable/ic_send"
                app:iconTint="@color/colorAccent" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>